@@ -44,3 +44,19 @@ Description of some commands:
    For example:
    ejabberdctl srg-create g1 example.org "'Group number 1'" this_is_g1 g1
 
+ - ban-account
+
+   This command kicks all the connected sessions of the account from the
+   server.  It also changes his password to another randomly
+   generated, so he can't login anymore unless a server administrator
+   changes him again the password.
+
+   It is possible to define the reason of the ban.  The new password
+   also includes the reason and the date and time of the ban.
+
+   For example, if this command is called:
+     ejabberdctl vhost example.org ban-account boby Spammed several MUC rooms
+   then the sessions of the local account which JID is boby@example.org
+   will be kicked, and its password will be set to something like this:
+     BANNED_ACCOUNT--20080425T21:45:07--2176635--Spammed_several_MUC_rooms
+
