@@ -1,3 +1,8 @@
+2008-04-26  Badlop  <badlop@process-one.net>
+
+	* src/mod_ctlextra.erl: New command: ban-account
+	* README.txt: Documented new command
+
 2008-04-04  Badlop  <badlop@process-one.net>
 
 	* src/mod_ctlextra.erl: Added new command
